json files for labeling also json files for no blame

--- a/Prelimenary_blame_detection.ipynb
+++ b/Prelimenary_blame_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "654eaafd",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "id": "22d5f70d",
    "metadata": {},
    "outputs": [],
@@ -220,6 +220,35 @@
     "    return result\n",
     "\n",
     "# Example usage: converted = list_to_dict(data)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def danish_sentences_without_blame_extraction(blame_dict, data, text_column):\n",
+    "    \"\"\"\n",
+    "    Extract sentences that do NOT contain blame, using the dictionary\n",
+    "    returned by get_rows_and_positions.\n",
+    "    \n",
+    "    blame_dict: {row_index: [positions_of_1s]}\n",
+    "    data: DataFrame with a column containing lists of sentences (as lists or stringified lists)\n",
+    "    text_column: name of the column in `data` containing the text sentences\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    sentences = {}\n",
+    "    \n",
+    "    for para in data.index:\n",
+    "        text_sentences = ast.literal_eval(data.loc[para][text_column])\n",
+    "        blame_positions = blame_dict.get(para, [])\n",
+    "        \n",
+    "        non_blame_sentence_dict = {}\n",
+    "        for idx, sentence in enumerate(text_sentences):\n",
+    "            if idx not in blame_positions:  # only keep sentences not containing blame\n",
+    "                non_blame_sentence_dict[idx] = sentence\n",
+    "        \n",
+    "        if non_blame_sentence_dict:  # only add if there are non-blame sentences\n",
+    "            sentences[para] = non_blame_sentence_dict\n",
+    "    \n",
+    "    return sentences\n",
+    "\n",
     "\n",
     "\n",
     "#------------------------------------#\n",
@@ -1139,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2f3d1f50",
    "metadata": {},
    "outputs": [],
@@ -1169,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "791d62ac",
    "metadata": {},
    "outputs": [
@@ -1199,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ee8a51ac",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a330e60a",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d3941eff",
    "metadata": {},
    "outputs": [],
@@ -1598,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "45c64bdd",
    "metadata": {},
    "outputs": [],
@@ -1706,8 +1735,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "0c9c232d",
+   "execution_count": 18,
+   "id": "c5e60fa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,7 +1749,17 @@
     "four_temps = base_dir + \"/sentences_in_four_templates.json\"\n",
     "three_temps = base_dir + \"/sentences_in_three_templates.json\"\n",
     "two_temps = base_dir + \"/sentences_in_two_templates.json\"\n",
-    "one_temps = base_dir + \"/sentences_in_one_templates.json\"\n",
+    "one_temps = base_dir + \"/sentences_in_one_templates.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c9c232d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "#apply merge\n",
     "\n",
@@ -1737,7 +1776,205 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hell yearh"
+    "# Now for the no blame data\n",
+    "\n",
+    "#extract sentences with no blame from the dictiorary of blame indices with blame\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2cac3b3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences_no_blame_5_temps = danish_sentences_without_blame_extraction(blame_dict = da_sent_5_temps, data = all_templates_data, text_column = 'da_segmented_text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "00719dea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make all sentences identified by all five templates with NO BLAME into json file\n",
+    "#make danish sentences into json and write\n",
+    "convert_to_json_and_write(file_name = 'NO_BLAME_sentences_in_five_templates',sentences = sentences_no_blame_5_temps)\n",
+    "\n",
+    "#change format for labelstudio and append meta data\n",
+    "json_append_meta_data(file_name = 'NO_BLAME_sentences_in_five_templates', data = all_templates_data)\n",
+    "\n",
+    "#Now append preceding and succeding sentence for each blame in addition to government meta data\n",
+    "json_government_and_context(file_name = 'NO_BLAME_sentences_in_five_templates', data = all_templates_data, government_data = regerings_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a0f65457",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences_no_blame_4_temps = danish_sentences_without_blame_extraction(blame_dict = da_sent_4_temps, data = all_templates_data, text_column = 'da_segmented_text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "91e8d350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make all sentences identified by four templates with NO BLAME into json file\n",
+    "#make danish sentences into json and write\n",
+    "convert_to_json_and_write(file_name = 'NO_BLAME_sentences_in_four_templates',sentences = sentences_no_blame_4_temps)\n",
+    "\n",
+    "#change format for labelstudio and append meta data\n",
+    "json_append_meta_data(file_name = 'NO_BLAME_sentences_in_four_templates', data = all_templates_data)\n",
+    "\n",
+    "#Now append preceding and succeding sentence for each blame in addition to government meta data\n",
+    "json_government_and_context(file_name = 'NO_BLAME_sentences_in_four_templates', data = all_templates_data, government_data = regerings_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8faa9927",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences_no_blame_3_temps = danish_sentences_without_blame_extraction(blame_dict = da_sent_3_temps, data = all_templates_data, text_column = 'da_segmented_text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bdbc2662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make all sentences identified by three templates with NO BLAME into json file\n",
+    "#make danish sentences into json and write\n",
+    "convert_to_json_and_write(file_name = 'NO_BLAME_sentences_in_three_templates',sentences = sentences_no_blame_3_temps)\n",
+    "\n",
+    "#change format for labelstudio and append meta data\n",
+    "json_append_meta_data(file_name = 'NO_BLAME_sentences_in_three_templates', data = all_templates_data)\n",
+    "\n",
+    "#Now append preceding and succeding sentence for each blame in addition to government meta data\n",
+    "json_government_and_context(file_name = 'NO_BLAME_sentences_in_three_templates', data = all_templates_data, government_data = regerings_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "02c83b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences_no_blame_2_temps = danish_sentences_without_blame_extraction(blame_dict = da_sent_2_temps, data = all_templates_data, text_column = 'da_segmented_text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "146e5e35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make all sentences identified by two templates with NO BLAME into json file\n",
+    "#make danish sentences into json and write\n",
+    "convert_to_json_and_write(file_name = 'NO_BLAME_sentences_in_two_templates',sentences = sentences_no_blame_2_temps)\n",
+    "\n",
+    "#change format for labelstudio and append meta data\n",
+    "json_append_meta_data(file_name = 'NO_BLAME_sentences_in_two_templates', data = all_templates_data)\n",
+    "\n",
+    "#Now append preceding and succeding sentence for each blame in addition to government meta data\n",
+    "json_government_and_context(file_name = 'NO_BLAME_sentences_in_two_templates', data = all_templates_data, government_data = regerings_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ba404c53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences_no_blame_1_temps = danish_sentences_without_blame_extraction(blame_dict = da_sent_1_temps, data = all_templates_data, text_column = 'da_segmented_text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f6a57cc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make all sentences identified by one templates with NO BLAME into json file\n",
+    "#make danish sentences into json and write\n",
+    "convert_to_json_and_write(file_name = 'NO_BLAME_sentences_in_one_templates',sentences = sentences_no_blame_1_temps)\n",
+    "\n",
+    "#change format for labelstudio and append meta data\n",
+    "json_append_meta_data(file_name = 'NO_BLAME_sentences_in_one_templates', data = all_templates_data)\n",
+    "\n",
+    "#Now append preceding and succeding sentence for each blame in addition to government meta data\n",
+    "json_government_and_context(file_name = 'NO_BLAME_sentences_in_one_templates', data = all_templates_data, government_data = regerings_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6464832a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#apply merge of 5+4, 5+4+3 etc\n",
+    "\n",
+    "\n",
+    "base_dir = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files\"\n",
+    "\n",
+    "#save paths in variables\n",
+    "no_blame_five_temps = base_dir + \"/NO_BLAME_sentences_in_five_templates.json\"\n",
+    "no_blame_four_temps = base_dir + \"/NO_BLAME_sentences_in_four_templates.json\"\n",
+    "no_blame_three_temps = base_dir + \"/NO_BLAME_sentences_in_three_templates.json\"\n",
+    "no_blame_two_temps = base_dir + \"/NO_BLAME_sentences_in_two_templates.json\"\n",
+    "no_blame_one_temps = base_dir + \"/NO_BLAME_sentences_in_one_templates.json\"\n",
+    "\n",
+    "merge_json_files(json_files = [no_blame_five_temps, no_blame_four_temps], output_file_path = base_dir + '/NO_BLAME_collapsed_sentences_5_and_4.json')\n",
+    "merge_json_files(json_files = [no_blame_five_temps, no_blame_four_temps, no_blame_three_temps], output_file_path = base_dir + '/NO_BLAME_collapsed_sentences_5_and_4_and_3.json')\n",
+    "merge_json_files(json_files = [no_blame_five_temps, no_blame_four_temps, no_blame_three_temps, no_blame_two_temps], output_file_path = base_dir + '/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2.json')\n",
+    "merge_json_files(json_files = [no_blame_five_temps, no_blame_four_temps, no_blame_three_temps, no_blame_two_temps, no_blame_one_temps], output_file_path = base_dir + '/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2_and_1.json')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b419bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Afterwards 50 random samples of sentences which had been classified as containing blame were collected.\n",
+    "These sentences were randowmly drawn using xxx from the data file containing merged blame sentences from all model-templates.\n",
+    "This was deemed a suffienct step in order to gather a validation set with as little premade assumptions \n",
+    "regarding the model performance as possiple. Due to the concern that the sentences which all templates classified as containing\n",
+    "blame could share some intrinsic feature of blame, which woudl not caputure the entire spectrum of what blame can be. \n",
+    "By drawing the validation set from all detected sentences of blame, the aim was to make the validation set as representative of\n",
+    "blame in political speach as possiple. However, due to the relative small number of blame as a proportion of the \n",
+    "total amount of sentences, drawing from the pre-classified labels was a nessecary step due to time-constraints, \n",
+    "as an enourmous amount of data should be gold-labeled if a true random sample would be drawn from the entire dataset. \n",
+    "In this case, if the calculated percentage of sentences containing blame is somewhat accurate \n",
+    "(around 1%) 5.000 true random samples would need to be manually labelled if we were to achive a validation \n",
+    "set of just 50 labels being true.\n",
+    "\n",
+    "In addition to the 50 random samples pre-classified as blame drawn, also 50 random samples pre-classified as not blame were drawn.\n",
+    "\n",
+    "These would be combined to a single set of 100 samples, which would be passed to labelStudio for labelling. It is important to note, that \n",
+    "the computationally pre-classified label (decision by the PolDebate) as either blame or no blame, was hid during labelling,\n",
+    "as to not influence the authers decision of whether the sentence contained blame or not.\n",
+    " \n",
+    "'''"
    ]
   }
  ],
