randomly sampled data for Gold labeling

--- a/Prelimenary_blame_detection.ipynb
+++ b/Prelimenary_blame_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "654eaafd",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,8 @@
     "import numpy as np\n",
     "import ipywidgets\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "import random"
    ]
   },
   {
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "22d5f70d",
    "metadata": {},
    "outputs": [],
@@ -1975,6 +1976,70 @@
     "as to not influence the authers decision of whether the sentence contained blame or not.\n",
     " \n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ab46d35a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw 50 random samples from the blame data\n",
+    "\n",
+    "# Load your flattened JSON\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Sample 50 random entries\n",
+    "sampled_data = random.sample(data, k=50)\n",
+    "\n",
+    "# Add a new key \"Blame\": 1 to each entry\n",
+    "for entry in sampled_data:\n",
+    "    entry[\"Blame\"] = 1\n",
+    "\n",
+    "# Save the modified sampled data\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/blame_true_sampled_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(sampled_data, f, ensure_ascii=False, indent=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "66edc5c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw 50 random samples from the blame data\n",
+    "\n",
+    "# Load your flattened JSON\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Sample 50 random entries\n",
+    "sampled_data = random.sample(data, k=50)\n",
+    "\n",
+    "# Add a new key \"Blame\": 1 to each entry\n",
+    "for entry in sampled_data:\n",
+    "    entry[\"Blame\"] = 0\n",
+    "\n",
+    "# Save the modified sampled data\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/blame_false_sampled_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(sampled_data, f, ensure_ascii=False, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0c86f439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_blame_sample_path = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/blame_true_sampled_data.json\"\n",
+    "false_blame_sample_path = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/blame_false_sampled_data.json\"\n",
+    "path_output = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/Gold_Gold_label_data.json\"\n",
+    "\n",
+    "merge_json_files(json_files = [true_blame_sample_path, false_blame_sample_path], output_file_path = path_output)"
    ]
   }
  ],
