angreement analysis of gold labeled data

--- a/analysis_gold_labeling.ipynb
+++ b/analysis_gold_labeling.ipynb
@@ -14,12 +14,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "68cee196",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#functions to be used"
+    "#functions to be used\n",
+    "def read_labeled_data_reformat(input_file, output_file):\n",
+    "    # --- PROCESSING ---\n",
+    "    with open(input_file, \"r\", encoding=\"utf-8\") as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    flattened = []\n",
+    "    for entry in data:\n",
+    "        flat_entry = {} \n",
+    "\n",
+    "        # Add all key-value pairs from the \"data\" dict\n",
+    "        flat_entry.update(entry.get(\"data\", {}))\n",
+    "\n",
+    "        # Extract the first \"choices\" value from annotations → result\n",
+    "        choices = None\n",
+    "        for ann in entry.get(\"annotations\", []):\n",
+    "            for res in ann.get(\"result\", []):\n",
+    "                val = res.get(\"value\", {})\n",
+    "                if \"choices\" in val:\n",
+    "                    # if multiple choices exist, join them\n",
+    "                    choices = \", \".join(val[\"choices\"])\n",
+    "                    break\n",
+    "            if choices:\n",
+    "                break\n",
+    "\n",
+    "        flat_entry[\"choices\"] = choices\n",
+    "\n",
+    "        flattened.append(flat_entry)\n",
+    "\n",
+    "    # --- SAVE OUTPUT ---\n",
+    "    with open(output_file, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(flattened, f, indent=4, ensure_ascii=False)\n",
+    "\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "def get_choices(json_data, paragraph, sentence_nr):\n",
+    "    \"\"\"\n",
+    "    Returns the 'choices' value for a given paragraph and sentence number\n",
+    "    from the flattened JSON file.\n",
+    "\n",
+    "    Parameters:\n",
+    "        json_file (str): Path to the flattened JSON file\n",
+    "        paragraph (str or int): Paragraph number to look up\n",
+    "        sentence_nr (str or int): Sentence number to look up\n",
+    "\n",
+    "    Returns:\n",
+    "        str or None: The choices value if found, otherwise None\n",
+    "    \"\"\"\n",
+    "\n",
+    "    for entry in json_data:\n",
+    "        if str(entry.get(\"paragraph\")) == str(paragraph) and str(entry.get(\"sentence_nr\")) == str(sentence_nr):\n",
+    "            return entry.get(\"choices\")\n",
+    "\n",
+    "    return None  # If no match found\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "80fcac79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file_markus = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/markus_labeling.json\"\n",
+    "output_file_markus = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/cleaned_labelled_markus.json\"\n",
+    "\n",
+    "read_labeled_data_reformat(input_file_markus, output_file_markus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "02218753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file_rune = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/labelled_rune.json\"\n",
+    "output_file_rune = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/cleaned_labelled_rune.json\"\n",
+    "\n",
+    "read_labeled_data_reformat(input_file_rune, output_file_rune)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "122c5ad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Inter annotater agreement\n",
+    "\n",
+    "#load data\n",
+    "with open(output_file_markus, \"r\", encoding=\"utf-8\") as f:\n",
+    "        markus_data = json.load(f)\n",
+    "\n",
+    "with open(output_file_rune, \"r\", encoding=\"utf-8\") as f:\n",
+    "        rune_data = json.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67863ba2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inter_annotater_agreement = []\n",
+    "inter_annotater_disagreement = []\n",
+    "\n",
+    "for entry in markus_data:\n",
+    "    paragraph_nr = entry['paragraph']\n",
+    "    sentence_nr = entry['sentence_nr']\n",
+    "\n",
+    "    model_blame = entry[\"Blame\"]\n",
+    "\n",
+    "    markus_choice = entry[\"choices\"]\n",
+    "    \n",
+    "    rune_choice = get_choices(rune_data, paragraph_nr, sentence_nr)\n",
+    "\n",
+    "    if markus_choice != rune_choice:\n",
+    "        inter_annotater_disagreement.append((int(paragraph_nr), int(sentence_nr)))\n",
+    "\n",
+    "    elif markus_choice == rune_choice:\n",
+    "        inter_annotater_agreement.append((int(paragraph_nr), int(sentence_nr)))\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"Error\")\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0551e213",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(inter_annotater_agreement))\n",
+    "print(len(inter_annotater_disagreement))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e5b9b666",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agreement_with_model = []\n",
+    "disagreement_with_model = []\n",
+    "\n",
+    "for entry in markus_data:\n",
+    "    paragraph_nr = entry['paragraph']\n",
+    "    sentence_nr = entry['sentence_nr']\n",
+    "\n",
+    "    model_blame = entry[\"Blame\"]\n",
+    "\n",
+    "    markus_choice = entry[\"choices\"]\n",
+    "    \n",
+    "    rune_choice = get_choices(rune_data, paragraph_nr, sentence_nr)\n",
+    "\n",
+    "    annotater_choice = 0\n",
+    "\n",
+    "    if (markus_choice == \"Blame\") or (rune_choice == \"Blame\"):\n",
+    "        annotater_choice = 1\n",
+    "\n",
+    "    if annotater_choice == int(model_blame):\n",
+    "        agreement_with_model.append((int(paragraph_nr), int(sentence_nr)))\n",
+    "    \n",
+    "    elif annotater_choice != int(model_blame):\n",
+    "        disagreement_with_model.append((int(paragraph_nr), int(sentence_nr)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c4acb9f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(agreement_with_model))\n",
+    "print(len(disagreement_with_model))"
    ]
   }
  ],
@@ -30,7 +232,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.7"
   }
  },
