gold labeling analysis

--- a/analysis_gold_labeling.ipynb
+++ b/analysis_gold_labeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0ddde3a6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "68cee196",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "\n",
     "import json\n",
     "\n",
-    "def get_choices(json_data, paragraph, sentence_nr):\n",
+    "def get_choices(json_data, paragraph, sentence_nr, key = \"choices\"):\n",
     "    \"\"\"\n",
     "    Returns the 'choices' value for a given paragraph and sentence number\n",
     "    from the flattened JSON file.\n",
@@ -71,7 +71,7 @@
     "\n",
     "    for entry in json_data:\n",
     "        if str(entry.get(\"paragraph\")) == str(paragraph) and str(entry.get(\"sentence_nr\")) == str(sentence_nr):\n",
-    "            return entry.get(\"choices\")\n",
+    "            return entry.get(key)\n",
     "\n",
     "    return None  # If no match found\n",
     "\n"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "80fcac79",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "02218753",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "122c5ad8",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "67863ba2",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "0551e213",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "id": "a14d9861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "inter-annotater agreement of 86%\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "e5b9b666",
    "metadata": {},
    "outputs": [],
@@ -206,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "c4acb9f6",
    "metadata": {},
    "outputs": [
@@ -222,6 +234,157 @@
    "source": [
     "print(len(agreement_with_model))\n",
     "print(len(disagreement_with_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70c05797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "One or more annotaters agreee with the model 78% of the samples\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a134de77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80.23255813953489\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Find in how great a proportion of the times where both annotaters agreed, \n",
+    "# did they also agree with the model\n",
+    "\n",
+    "inter_ann_aggee_and_model = 0\n",
+    "for i in inter_annotater_agreement:\n",
+    "    if i in agreement_with_model:\n",
+    "        inter_ann_aggee_and_model += 1\n",
+    "\n",
+    "\n",
+    "print((inter_ann_aggee_and_model/len(inter_annotater_agreement))*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "334995a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#in 80 percent of all cases where both annotaters agreed, \n",
+    "# the labels of the PolDebate model also agreed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db833895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Conversly if the annotaters did not agree, \n",
+    "# how is the distribution of blame/no blame by the model?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7ec58b87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64.28571428571429\n"
+     ]
+    }
+   ],
+   "source": [
+    "blame = 0\n",
+    "no_blame = 0\n",
+    "\n",
+    "for para, sent in inter_annotater_disagreement:\n",
+    "    model_choice = get_choices(markus_data, para, sent, key= 'Blame')\n",
+    "\n",
+    "    if model_choice == 1:\n",
+    "        blame+=1\n",
+    "    elif model_choice == 0:\n",
+    "        no_blame += 1\n",
+    "\n",
+    "print((blame/(no_blame+blame))*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdbd739d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "\n",
+    "a rather even, at least to some extend, distribution of blame/no_blame in \n",
+    "inter-annotater disagreeement, where 64% were classified as blame by the PolDebate \n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5010941e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "A note about the sentences classified as blame by the PolDebate model.\n",
+    "During annotation quite a bit of the sentences would be negative but \n",
+    "manually annotated as blame. Thus the PolDebate model might have a tendence \n",
+    "(understandable) to highten the probability of a sentence containing blame simply due\n",
+    "to the sentiment of the sentence. However, the data used for training \n",
+    "(sentences classified as blame by all five templates) is assumed to be more robust and \n",
+    "thus some of these misclassifications are assumed to be watered down enough. \n",
+    "The validation of the model on the gold-labeled dataset will show to what degree \n",
+    "this was achieved.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''"
    ]
   }
  ],
