--- a/Prelimenary_blame_detection.ipynb
+++ b/Prelimenary_blame_detection.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "22d5f70d",
    "metadata": {},
    "outputs": [],
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "ab46d35a",
    "metadata": {},
    "outputs": [],
@@ -2005,12 +2005,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "66edc5c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#draw 50 random samples from the blame data\n",
+    "#draw 50 random samples from the no blame data\n",
     "\n",
     "# Load your flattened JSON\n",
     "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
@@ -2038,6 +2038,79 @@
     "true_blame_sample_path = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/blame_true_sampled_data.json\"\n",
     "false_blame_sample_path = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/blame_false_sampled_data.json\"\n",
     "path_output = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/Gold_Gold_label_data.json\"\n",
+    "\n",
+    "merge_json_files(json_files = [true_blame_sample_path, false_blame_sample_path], output_file_path = path_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d78daab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Do the above again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92854ae8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw 50 random samples from the blame data\n",
+    "# Load your flattened JSON\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Sample 50 random entries\n",
+    "sampled_data = random.sample(data, k=50)\n",
+    "\n",
+    "# Add a new key \"Blame\": 1 to each entry\n",
+    "for entry in sampled_data:\n",
+    "    entry[\"Blame\"] = 1\n",
+    "\n",
+    "# Save the modified sampled data\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v2_blame_true_sampled_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(sampled_data, f, ensure_ascii=False, indent=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0df8b27a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw 50 random samples from the no blame data\n",
+    "\n",
+    "# Load your flattened JSON\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Sample 50 random entries\n",
+    "sampled_data = random.sample(data, k=50)\n",
+    "\n",
+    "# Add a new key \"Blame\": 1 to each entry\n",
+    "for entry in sampled_data:\n",
+    "    entry[\"Blame\"] = 0\n",
+    "\n",
+    "# Save the modified sampled data\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v2_blame_false_sampled_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(sampled_data, f, ensure_ascii=False, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e4199bd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_blame_sample_path = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v2_blame_true_sampled_data.json\"\n",
+    "false_blame_sample_path = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v2_blame_false_sampled_data.json\"\n",
+    "path_output = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/v2_Gold_Gold_label_data.json\"\n",
     "\n",
     "merge_json_files(json_files = [true_blame_sample_path, false_blame_sample_path], output_file_path = path_output)"
    ]
