stopeed git lfs going forward

--- a/analysis_gold_labeling.ipynb
+++ b/analysis_gold_labeling.ipynb
@@ -366,6 +366,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6c20b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blame = 0\n",
+    "no_blame = 0\n",
+    "\n",
+    "for para, sent in inter_annotater_agreement:\n",
+    "    model_choice = get_choices(markus_data, para, sent, key= 'Blame')\n",
+    "\n",
+    "    if model_choice == 1:\n",
+    "        blame+=1\n",
+    "    elif model_choice == 0:\n",
+    "        no_blame += 1\n",
+    "\n",
+    "print((blame/(no_blame+blame))*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5010941e",
    "metadata": {},
    "outputs": [],
