--- a/training_data_maker.ipynb
+++ b/training_data_maker.ipynb
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "12a1768c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Open the blame data and make entry called label = 1\n",
     "\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "        blame_data = json.load(f)\n",
     "\n",
     "for entry in blame_data:\n",
@@ -64,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9cb81d90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "                no_blame_data = json.load(f)\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "        no_blame_data = json.load(f)\n",
     "\n",
     "for entry in no_blame_data:\n",
     "    entry[\"label\"] = 0\n",
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "12a152cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "#save data\n",
     "\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/training_data/training_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/training_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "        json.dump(all_training_data, f, ensure_ascii=False, indent=2)"
    ]
   },
@@ -103,7 +103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "blame_bert",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -117,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
